manifests/13-pdb/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequirePDB
metadata:
  name: requerir-presupuesto-interrupcion
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    excludedNamespaces: ["kube-system", "gatekeeper-system"]
