manifests/13-pdb/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirepdb
spec:
  crd:
    spec:
      names:
        kind: K8sRequirePDB
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirepdb
        
        violation[{"msg": msg}] {
          input.review.object.kind == "Deployment"
          input.review.object.metadata.labels["entorno"] == "produccion"
          not input.review.object.metadata.annotations["iso27001/pdb-configured"]
          msg := "Violacion ISO 27001: Todo Deployment en produccion debe incluir la anotacion 'iso27001/pdb-configured: true' certificando su alta disponibilidad"
        }
